# sigma-computer

./: Components.ods  README.md
doc/: Ideas and information.odt  control unit.odt  instruction-set.odt  process.odt  todo.odt
doc/BOM/: Clock.ods
firmware/BIOS/: BIOS.si
firmware/instruction-decoder/: instruction-decoder.micro
firmware/microcode-compiler/: .ghc.environment.x86_64-mingw32-8.6.5  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  microcode-compiler.cabal
firmware/microcode-compiler/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
firmware/microcode-compiler/src/: ast.cpp  ast.h  builder.cpp  builder.h  lexer.cpp  lexer.h  lexer.hs  main.cpp  main.hs
firmware/microcode-compiler/src/ast/: call.cpp  call.h  expression.h  label.cpp  label.h  read.cpp  read.h  ret.cpp  ret.h  statement.h  sublabel.cpp  sublabel.h  write.cpp  write.h
firmware/sigma-asm/: CMakeLists.txt  test.sa
sketch/sigma-computer/: 74HC253.lib  ALU.sch  ALU.sch-bak  Additional74.lib  BIOS.bak  BIOS.sch  General.lib  IDE.sch  Registers.sch  Registers_A-C.sch  Registers_A-C.sch-bak  Registers_A-F.bak  Registers_A-F.sch  Registers_D-F.bak  Registers_D-F.sch  SRAM.lib  UART.sch  VGA.sch  _autosave-Counters.sch  clock.bak  clock.sch  clock.sch-bak  control_unit.bak  control_unit.sch  fp-info-cache  memory.bak  memory.sch  memory.sch-bak  sigma-computer-cache.lib  sigma-computer-rescue.lib  sigma-computer.bak  sigma-computer.kicad_pcb  sigma-computer.kicad_pcb-bak  (+8 more)
(+3 files in other folders)
